--- a/example/app/config/conf.yml
+++ b/example/app/config/conf.yml
@@ -21,13 +21,13 @@ mysql:
         port: 3306
         user: root
         password: 123456
-        db: test1
+        db: test
       - #可以配置多个从库
         ip: 127.0.0.1
         port: 3306
         user: root
         password: 123456
-        db: test2
+        db: test
   backend:
     master: #主库
       - #可以配置多个主库
