--- a/example/config/conf.yml
+++ b/example/config/conf.yml
@@ -21,7 +21,7 @@ mysql:
         port: 3306
         user: root
         password: 123456
-        db: test1
+        db: test
       - #可以配置多个从库
         ip: 127.0.0.1
         port: 3306
@@ -35,11 +35,11 @@ mysql:
         port: 3306
         user: root
         password: 123456
-        db: test3
+        db: test
     slaver: #从库
       - #可以配置多个从库
         ip: 127.0.0.1
         port: 3306
         user: root
         password: 123456
-        db: test4
+        db: test
