--- a/example/config/conf.yml
+++ b/example/config/conf.yml
@@ -5,6 +5,10 @@ sys:
 redis:
   ip: 127.0.0.1
   port: 6379
+#logrus日志
+logrus:
+  level: 13
+  WriteToFilePath: ""
 #数据库配置，支持多db，多主从
 mysql:
   default:
