--- a/example/app/config/conf.yml
+++ b/example/app/config/conf.yml
@@ -8,8 +8,8 @@ redis:
   port: 6379
 #logrus日志
 logrus:
-  level: 1
-  WriteToFilePath: /Users/zhangxiong/work/logs/elf.log
+  level: 6
+#  WriteToFilePath: /Users/zhangxiong/work/logs/elf.log
 #数据库配置，支持多db，多主从
 mysql:
   default:
