--- a/example/app/config/conf.yaml
+++ b/example/app/config/conf.yaml
@@ -17,20 +17,20 @@ mysql:
       - #可以配置多个主库
         ip: 127.0.0.1
         port: 3306
-        user: root
+        user: elf2
         password: 123456
         db: test
     slaver: #从库
       - #可以配置多个从库
         ip: 127.0.0.1
         port: 3306
-        user: root
+        user: elf2
         password: 123456
         db: test
       - #可以配置多个从库
         ip: 127.0.0.1
         port: 3306
-        user: root
+        user: elf2
         password: 123456
         db: test
   backend:
@@ -38,13 +38,13 @@ mysql:
       - #可以配置多个主库
         ip: 127.0.0.1
         port: 3306
-        user: root
+        user: elf2
         password: 123456
         db: test3
     slaver: #从库
       - #可以配置多个从库
         ip: 127.0.0.1
         port: 3306
-        user: root
+        user: elf2
         password: 123456
         db: test4
