--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ example/newversion_test/new_inner/db/*
 !example/newversion_test/new_inner/db/.gitkeep
 example/newversion_test/new_inner/download/*
 !example/newversion_test/new_inner/download/.gitkeep
+example/app/config/*.yml
+example/app/config/*.yaml
